--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,60 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Fredoka:wght@300..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+
+
+body {
+    background: #f4f2f2;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
+}
+
+nav{
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.037);
+}
+
+.logo{
+    font-family: "DM Serif Display", serif;
+}
+
+.profile{
+    box-shadow: 0px 10px 5px 5px rgba(0, 0, 0, 0.108);
+
+}
+
+.cshadow{
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.092);
+}
+
+.catshadow{
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.333);
+}
+
+
+.aanim::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background: #000000;
+}
+
+.aanim:hover::after{
+    animation: wztoh 0.3s ease-in-out 1;
+    width: 100%;
+}
+
+.aanim:active:after{
+    background: #696969;
+}
+
+@keyframes wztoh {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
