--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.shadow1{
+    box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.108);
+}
+.shadow2{
+    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.038);
+}
+.aanim::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 2px;
+    background: #4f46e5;
+}
+
+.aanim:hover::after{
+    animation: wztoh 0.3s ease-in-out 1;
+    width: 100%;
+}
+
+.aanim:active:after{
+    background: #000000;
+}
+
+@keyframes wztoh {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+.smooth{
+    transition: all 0.5s ease-in-out;
+}
