--- a/app/globals.css
+++ b/app/globals.css
@@ -3,36 +3,39 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Fredoka:wght@300..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 body {
     background: #f4f2f2;
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    scroll-behavior: smooth;
+    transition: all 0.5s ease;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-nav{
+nav {
     box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.037);
 }
 
-.logo{
+.logo {
+    font-family: "Cormorant Garamond", serif;
     font-family: "DM Serif Display", serif;
 }
 
-.profile{
+.profile {
     box-shadow: 0px 10px 5px 5px rgba(0, 0, 0, 0.108);
 
 }
 
-.cshadow{
+.cshadow {
     box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.092);
 }
 
-.catshadow{
+.catshadow {
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.333);
 }
 
 
-.aanim::after{
+.aanim::after {
     content: "";
     position: absolute;
     bottom: 0;
@@ -42,12 +45,12 @@ nav{
     background: #000000;
 }
 
-.aanim:hover::after{
+.aanim:hover::after {
     animation: wztoh 0.3s ease-in-out 1;
     width: 100%;
 }
 
-.aanim:active:after{
+.aanim:active:after {
     background: #696969;
 }
 
@@ -55,7 +58,58 @@ nav{
     from {
         width: 0;
     }
+
     to {
         width: 100%;
+    }
+}
+
+@media screen {}
+
+@media (max-width: 550px) {
+    .cshadow {
+        width: 90%;
+    }
+
+    .logo {
+        justify-content: center;
+        align-items: center;
+        font-size: 35px;
+    }
+
+    .invi {
+        display: none;
+        width: 0px;
+    }
+
+    .centernm {
+        font: 28px;
+    }
+
+    .daam {
+        display: none;
+    }
+}
+
+@media (min-width: 350px) {
+    .cshadow {
+        width: 90%;
+    }
+}
+
+.smooth {
+    transition: all 0.5s ease-in-out;
+    box-shadow: 0 0 50vw 50vw rgba(0, 0, 0, 0.69);
+    animation: wztoef 0.5s ease-in-out 1;
+}
+
+
+@keyframes wztoef {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 85%;
     }
 }
