--- a/app/globals.css
+++ b/app/globals.css
@@ -25,14 +25,14 @@ nav {
     box-shadow: 0px 10px 5px 5px rgba(0, 0, 0, 0.108);
 
 }
-/* 
+
 .cshadow {
     box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.092);
 }
 
 .catshadow {
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.333);
-} */
+}
 
 
 .aanim::after {
@@ -97,11 +97,10 @@ nav {
     }
 }
 
-/* .smooth {
+.smooth {
     transition: all 0.5s ease-in-out;
-    box-shadow: 0 0 50vw 50vw rgba(0, 0, 0, 0.69);
     animation: wztoef 0.5s ease-in-out 1;
-} */
+}
 
 
 @keyframes wztoef {
